tests/expectations/compiler/dyn_record/dyn_record_cast_struct_fail.out
Error [EPAR0370005]: expected 'record' -- found '{'
    --> compiler-test:6:28
     |
   6 |     fn main(f: Foo) -> dyn {
     |                            ^
Error [EPAR0370005]: expected 'record' -- found ';'
    --> compiler-test:8:24
     |
   8 |         return f as dyn;
     |                        ^
